[project]
name = "fmea-pra-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Herobras", email = "gaspaiglesias@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
]
